# webbot

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  seed.py  seed_diagnosis.py
backend/app/: main.py
backend/app/api/v1/: cases.py  explain.py  health.py  llm.py  llm_configs.py  projects.py  report.py  router.py  runs.py  scout.py  (+1 more)
backend/app/core/: config.py  database.py  security.py
backend/app/engine/: __init__.py  actions.py  ai_diagnosis.py  auth.py  browser.py  diagnosis.py  drag_and_connect.py  models.py  runner.py  self_heal.py  snapshot.py  step_capturer.py  storage.py  vlm.py  ws_broadcaster.py
backend/app/llm/: __init__.py  anthropic_provider.py  gemini_provider.py  generate.py  narrative.py  ollama_provider.py  openai_provider.py  protocol.py  retry.py  schemas.py  scout.py  visual.py
backend/app/models/: __init__.py  base.py  heal_event.py  llm_config.py  project.py  run.py  run_step.py  screenshot.py  step_diagnosis.py  test_case.py
backend/app/reports/: exporter.py  sanitizer.py  token.py
backend/app/ws/: socketio_server.py
backend/migrations/: env.py
backend/migrations/versions/: 2a295c93d2de_sync_schema_with_models.py  b7c8ad3ec78d_initial_tables.py
backend/scripts/: demo_drag.py
backend/storage/exports/: run_20_20260423_142234.html  run_21_20260423_142148.html
backend/tests/: conftest.py  test_actions.py  test_provider_factory.py  test_retry.py  test_runner.py  test_self_heal.py  test_visual.py
(+138 files in other folders)
