[project]
name = "webbot-backend"
version = "0.1.0"
description = "WebBot - Web automation testing robot backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "alembic>=1.13",
    "pydantic-settings>=2.2",
    "python-socketio>=5.11",
    "playwright>=1.44",
    "cryptography>=42.0",
    "redis>=5.0",
    "httpx[socks]>=0.27",
    "pillow>=10.0",
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
